# jarvis

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  agent.py  config.yaml  docker-compose.yml  evolve.py  overnight_tasks.md  pyproject.toml  requirements.txt  start.py
api/: Dockerfile  api_keys.py  audit.py  auth.py  crypto.py  db.py  deps.py  enhanced_conversation.py  main.py  models.py  pricing.py  rate_limits.py  rbac.py  request_signing.py  requirements.txt  scheduler.py  session_manager.py  task_runner.py  usage.py  webhooks.py
benchmarks/: ollama_vs_claude.md  run_benchmark.py
desktop/: .gitignore  error.html  main.js  package-lock.json  package.json  preload.js  tray.js  updater.js
docs/: README.md
jarvis/: ab_testing.py  benchmark.py  cache.py  circuit_breaker.py  config.py  context_manager.py  conversation.py  cost_tracker.py  dead_letter_queue.py  error_tracker.py  logger.py  logging_config.py  memory.py  memory_monitor.py  model_router.py  parallel.py  planner.py  plugin_discovery.py  plugin_loader.py  plugin_watcher.py  retry.py  scheduler.py  secrets_manager.py  session_persistence.py  templates.py  tool_chain.py  tool_dependencies.py  tool_permissions.py  tool_recommender.py  tool_registry.py  tool_router.py  vision.py  white_label.py
memory/: evolution_log.json
plugins/: _example.py  archive.py  clipboard.py  database.py  docker_manager.py  download_file.py  env_vars.py  example_greeting.py  file_search.py  github_integration.py  http_request.py  manifest.json  process_manager.py  system_info.py
scripts/: install_godot.ps1
(+226 files in other folders)
